# dedelayed

./: .gitignore  LICENSE  README.md  bdd100k_mixed_res.ipynb  bdd100k_mixed_res.py  fused.py  local.py  pyproject.toml  remote.py  requirements.txt
conf/: config.yaml
conf/experiment/: dedelayed_v1_efficientvitl1_efficientvitb0_ft_bdd100k.yaml
conf/tracker/: default.yaml
dedelayed/: __init__.py  registry.py
dedelayed/apps/dedelayed_v1/: __init__.py  experiment.py  preprocess.py  train_state.py
dedelayed/apps/dedelayed_v1/scripts/: demo.py  evaluate.py  train.py
dedelayed/data/: normalization.py
dedelayed/datasets/: __init__.py  cityscapes.py  factory.py  hf.py
dedelayed/layers/: splitvid_v10.py
dedelayed/models/: __init__.py
dedelayed/models/backbones/: __init__.py  evit_vd.py  mstransformer2d.py
dedelayed/models/dedelayed_v1/: __init__.py  base.py  efficientvitl1_efficientvitb0.py  efficientvitl1_mstransformer2d.py  factory.py
dedelayed/utils/: git.py  optim.py  preprocessing.py  trackers.py  utils.py
dedelayed/zoo/: __init__.py  models.py
scripts/: train.py
videos/: README.md
